[package]
name = "ocula"
version = "0.1.0"
authors = ["Kyle Bennett <k00benne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
actix-rt = "2.0.0"
actix="0.10.0"
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
eyre = "0.6.4"
color-eyre = "0.5.9"
# argonautica = { version = "0.2", features = ["simd"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.12.0"
validator_derive = "0.12.0"
redis-async = "0.8.1"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
env_logger = "0.8.2"
sonyflake = "0.1"